[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Textures/GUI/PlayerCursor.tres" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/MainUI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/MouseShenanigans.gd" type="Script" id=3]
[ext_resource path="res://Resources/Shaders/MainTheme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/UI/Settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/Inventory/Inventory.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/UI/Healthbar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/Staminabar.tscn" type="PackedScene" id=8]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -558.898, -103.223 )
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 36.0
margin_top = 37.0
margin_right = 507.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healthbar" parent="UI/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 471.0
margin_bottom = 53.0

[node name="Staminabar" parent="UI/VBoxContainer" instance=ExtResource( 8 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 57.0
margin_right = 471.0
margin_bottom = 110.0

[node name="WindowDialog" type="WindowDialog" parent="UI"]
visible = true
margin_left = 530.0
margin_top = 290.0
margin_right = 1206.0
margin_bottom = 690.0
rect_min_size = Vector2( 676, 400 )
popup_exclusive = true
window_title = "Inventory (no function atm)"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="UI/WindowDialog" instance=ExtResource( 6 )]

[node name="Settings" parent="UI" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.207031
anchor_top = 0.151667
anchor_right = 0.792969
anchor_bottom = 0.818333

[node name="MouseIndicator" type="Control" parent="UI"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillMe" type="Node2D" parent="UI/MouseIndicator"]
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="UI/MouseIndicator/KillMe"]

[node name="IndicatorSprite" type="Sprite" parent="UI/MouseIndicator/KillMe/Node2D"]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="UI/WindowDialog" to="UI" method="_on_WindowDialog_mouse_entered"]
[connection signal="mouse_exited" from="UI/WindowDialog" to="UI" method="_on_WindowDialog_mouse_exited"]
[connection signal="popup_hide" from="UI/WindowDialog" to="UI" method="_on_WindowDialog_popup_hide"]
